<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name">FluFiAIGo</string>
    <string name="nombre_app">FluFiAI GO</string>
    <string name="registrar_nomina">Registrar Nómina</string>
    <string name="salario_bruto">Salario Bruto (€)</string>
    <string name="retenciones_impuestos">Retenciones / Impuestos (€)</string>
    <string name="calcular_neto">Calcular Neto</string>
    <string name="salario_neto">Salario Neto:</string>
    <string name="nuevo_ingreso">Nuevo Ingreso</string>
    <string name="nuevo_gasto">Nuevo Gasto</string>
    <string name="concepto_gasto">Concepto (ej. Compra Mercadona)</string>
    <string name="concepto_ingreso">Concepto (ej. Venta Wallapop)</string>
    <string name="importe">Importe (€)</string>
    <string name="es_un_gasto_recurrente">¿Es un gasto recurrente?</string>
    <string name="es_un_ingreso_recurrente">¿Es un ingreso recurrente?</string>
    <string name="guardar_gasto">Guardar Gasto</string>
    <string name="guardar_ingreso">Guardar Ingreso</string>
    <string name="soporte_y_ayuda">Soporte y Ayuda</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_gasto">Fecha Gasto</string>
    <string name="fecha_ingreso">Fecha Ingreso</string>
    <string name="categoria_gasto">Categoria (ej. Transporte)</string>
    <string name="metodo_pago">Método de Pago</string>
    <string name="metodo_cobro">Método de Cobro</string>
    <string name="fecha_muestra">Mayo 2026</string>
    <string name="ingreso_boton_inicial">Ingreso</string>
    <string name="gasto_boton_inicial">Gasto</string>
    <string name="nomina_boton_inicial">Nomina</string>
    <string name="impuestos">Impuestos (€)</string>
    <string name="seguridad_social">Seguridad Social (€)</string>
    <string name="otras_deducciones">Otras Deducciones (€)</string>
    <string name="horas_extra">Horas Extra (€)</string>
    <string name="bonificaciones">Bonificaciones (€)</string>
    <string name="guardar_nomina">Guardar Nómina</string>
    <string name="sueldo_base">Sueldo Base (€)</string>
    <string-array name="opciones_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>Bizum</item>
        <item>Transferencia</item>
    </string-array>
    <string name="prefijo_nomina">Nómina: %s</string>
    <string name="movimiento_eliminado">Movimiento eliminado</string>
    <string name="cambiar_tema">Cambiar Tema</string>
    <string name="ingreso_guardado">Ingreso guardado</string>
    <string name="gasto_guardado">Gasto guardado</string>
    <string name="nomina_guardada">Nomina guardada</string>
</resources>